<resources>
    <string name="app_name">ToyProjectApp</string>
    <string name="mnu_contact">연락처</string>
    <string name="mnu_gallery">갤러리</string>
    <string name="item_contact_name">이름</string>
    <string name="item_contact_age">%1$d살</string>
    <string name="item_contact_phone">000–0000–0000</string>
    <string name="item_contact_country">국적</string>
    <string name="info_author">Author: author</string>
    <string name="info_size">Size: widthxheight</string>
<!--다이얼로그-->
    <string name="dialog_name">이름</string>
    <string name="dialog_age">나이</string>
    <string name="dialog_phone">연락처</string>
    <string name="dialog_country">국적</string>
    <string name="dialog_ok">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="hint_name">이름을 입력하세요.</string>
    <string name="hint_age">나이를 입력하세요.</string>
    <string name="hint_phone">연락처를 입력하세요.</string>
    <string name="hint_country">국적을 입력하세요.</string>
</resources>