<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/dialog_tv_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/dialog_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dialog_et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:autofillHints="@string/hint_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/dialog_tv_age"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/dialog_age"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dialog_et_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_age"
            android:inputType="numberDecimal"
            android:autofillHints="@string/hint_age" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/dialog_tv_phone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/dialog_phone" />

        <EditText
            android:id="@+id/dialog_et_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLength="13"
            android:autofillHints="@string/hint_phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/dialog_tv_country"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/dialog_country"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/dialog_et_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_country"
            android:inputType="text"
            android:autofillHints="@string/hint_country" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="end">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/white"
            android:layout_marginEnd="5dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/white"
            android:text="@string/dialog_ok" />

    </LinearLayout>

</LinearLayout>